2000-05-27  Jim Whitehead  <jnwhiteh@syr.edu>

	* tnt.el (tnt-fetch-info): fixed the regexp so it works.

2000-05-26  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-message-on-buddy-signonoff): changed name from
	"show-buddy-signonoff", to be consistent with "beep-on-..." vars. 
	(tnt-set-buddy-status): changed name of var

2000-05-26  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-open): added "Attempting to sign on..." message
	(tnt-buddy-list-mode-map): added tnt-fetch-info binding
	(tnt-fetch-info): added
	(tnt-handle-closed): now tries to auto-reconnect

2000-05-24  Jim Whitehead  <jnwhiteh@syr.edu>

	* tnt.el (tnt-show-buddy-signonoff): added.
	(tnt-set-buddy-status): checks for tnt-show-buddy-signoff, determines
	whether or not signon/off messages are displayed in the minibuffer.

2000-05-22  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-pop-event): now gives message if called when there
	are no events to respond to.

2000-05-16  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-login-flag-unset-after): added.
	(tnt-login-flag): added.
	(tnt-set-buddy-status): now checks the login flag.  for the first
	three seconds we're logged in, changes in buddy status are not
	reported to the user, since mostly they're not really "changes".
	(tnt-unset-login-flag): added.  called by the timer.  unsets the
	login flag.
	(tnt-handle-sign-on): now sets the login flag, and creates a timer
	to call the unset function.

2000-05-16  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-set-buddy-status): moved the call to
	set-just-signedonoff to within the check to see whether status
	just changed.  this fixes the bug where before it would say
	someone just signed on who in fact just set "away" or just became
	idle or whatever.

2000-05-16  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-im-buddy): now checks whether user is online.