@@ -1,3 +1,10 @@
+2000-06-01  Neil ''Fred'' Picciotto  <fred@guido.derf.net>
+
+	* tnt.el (tnt-reconnecting): added.
+	(tnt-handle-closed): now sets reconnecting flag.
+	(tnt-handle-nick): now checks reconnecting flag -- if it's t,
+	make it nil; if it's already nil, show the buddy list.
+
 2000-05-27  Jim Whitehead  <jnwhiteh@syr.edu>
 
 	* tnt.el (tnt-fetch-info): fixed the regexp so it works.
